2000-04-04  Raph Levien  <raph@lizardbreath.artofcode.com>

	* art_uta_vpath.c (art_uta_add_line): Fixed bug that was causing
	segfaults on alphas. Thanks to msw for localizing it.

2000-01-17  Raph Levien  <raph@gimp.org>

	* art_svp_vpath_stroke.c (art_svp_vpath_stroke): Typo in api
	header (thanks rak).

2000-01-16  Timur Bakeyev  <timur@gnu.org>

	* autoconf.sh: Instead of jumping between srdir and builddir just process
	all the auto* staff in srcdir. In fact, just saying the same things in 
	other words.

2000-01-10  Elliot Lee  <sopwith@redhat.com>

	* Makefile.am, *.h: Add rather bad hacks to the header files to allow compilation

	* Makefile.am: Distribute libart-config.in

2000-01-09  Raph Levien  <raph@gimp.org>

	art_rgb_pixbuf_affine.c, art_rgb_rgba_affine.c, art_rgb_svp.c,
	art_svp.c, art_svp_ops.c, art_svp_point.c, art_svp_render_aa.c,
	art_svp_vpath.c, art_svp_vpath_stroke.c, art_svp_wind.c,
	art_uta.c, art_uta_ops.c, art_uta_rect.c, art_uta_svp.c,
	art_uta_vpath.c, art_vpath.c, art_vpath_bpath.c, art_vpath_dash.c,
	art_vpath_svp.c: Added API documentation.

Fri Sep 24 17:53:21 1999  Raph Levien  <raph@acm.org>

	* art_svp_render_aa.c (art_svp_render_insert_active): Avoid
	reading undefined memory (thanks to Morten Welinder).

1999-09-19  Raph Levien  <raph@gimp.org>

	* art_pixbuf.c (art_pixbuf_duplicate): Added a duplicate function
	at the request of Michael Meeks.

1999-09-11  Raph Levien  <raph@gimp.org>

	* art_affine.c (art_affine_to_string): Tightened the predicate for
	matching rotate-only affines, which was too weak. Thanks to lewing
	for spotting it!

1999-09-01  Raph Levien  <raph@gimp.org>

	* art_affine.c, art_alphagamma.c, art_bpath.c, art_gray_svp.c,
	art_misc.c, art_pixbuf.c, art_rect.c, art_rect_svp.c,
	art_rect_uta.c, art_rgb.c, art_rgb_affine.c,
	art_rgb_bitmap_affine.c: Updates to api doc headers.

1999-08-24  Raph Levien  <raph@gimp.org>

	* art_affine.c, art_alphagamma.c, art_alphagamma.h, art_bpath.c,